[package]
name = "api_img1"
version = "0.1.0"
authors = ["diurtorn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.4"
rocket_codegen = "0.4.4"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.8"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
